# faux_alloc

./: CHANGELOG.md  Cargo.toml  README.md
examples/: main.rs
src/: lib.rs
